feat: adding multi language features to the kit

--- a/public/locales/de.json
+++ b/public/locales/de.json
@@ -1,5 +1,8 @@
 {
-    "Landing": {
+    "Common": {
+        "more": "mehr"
+    },
+    "LandingTemplate": {
         "welcome": "Hallo, Willkommen {user}"
     }
 }
