--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -1,5 +1,8 @@
 {
-    "Landing": {
+    "Common": {
+        "more": "more"
+    },
+    "LandingTemplate": {
         "welcome": "Hello, Welcome {user}"
     }
 }
